objects/vlocity_ins__ProviderEducation__c.object
<CustomObject>
    <description>Represents education and certification achieved by a service provider such as Doctor of Medicine (MD) earned by a physician or a Doctor of Dental Medicine (DMD) earned by a dentist. This object can also be used to track required continuing education courses. Master-detail child object of a Provider Contact.</description>
    <fields>
        <fullName>vlocity_ins__AccreditationType__c</fullName>
        <label>Accreditation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Fellowship</fullName>
                </value>
                <value>
                    <fullName>Residency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgencyName__c</fullName>
        <label>Agency Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CertificationNumber__c</fullName>
        <label>Certification #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Provider Education</relationshipLabel>
        <relationshipName>ProviderEducation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DegreeThroughDate__c</fullName>
        <label>Degree Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EducationType__c</fullName>
        <label>Education Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor of Medicine (MD)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Physical Therapy (DPT)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Osteopathic Medicine (DO)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Optometry (OD)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Dental Medicine (DMD)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Dental Surgery (DDS)</fullName>
                </value>
                <value>
                    <fullName>Dental Hygiene (ASDH)</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant (PA)</fullName>
                </value>
                <value>
                    <fullName>Occupational Therapy (OT)</fullName>
                </value>
                <value>
                    <fullName>Master of Science in Occupational Therapy (MSOT)</fullName>
                </value>
                <value>
                    <fullName>Master of Social Work (MSW)</fullName>
                </value>
                <value>
                    <fullName>Master of Public Health (MPH)</fullName>
                </value>
                <value>
                    <fullName>Registered Nurse (RM)</fullName>
                </value>
                <value>
                    <fullName>Nurse Practioner (NP)</fullName>
                </value>
                <value>
                    <fullName>Podiatric Medicine (DPM)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Chiropractic (DC)</fullName>
                </value>
                <value>
                    <fullName>Radiation Therapy (RT)</fullName>
                </value>
                <value>
                    <fullName>Respiratory Therapy (RT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__HoursApplied__c</fullName>
        <label>Hours Applied</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HoursNeededToRenew__c</fullName>
        <label>Hours Needed to Renew</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HoursRequired__c</fullName>
        <label>Hours Required</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InstitutionAddress__c</fullName>
        <label>Institution Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InstitutionName__c</fullName>
        <label>Institution Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProgramCompletedDate__c</fullName>
        <label>Program Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProgramName__c</fullName>
        <label>Program Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProgramStartDate__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecialtyType__c</fullName>
        <label>Specialty Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Intensivist</fullName>
                </value>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Bariatric Medicine / Surgery</fullName>
                </value>
                <value>
                    <fullName>Burn / Trauma</fullName>
                </value>
                <value>
                    <fullName>Cardiac Catheterization</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular Surgery</fullName>
                </value>
                <value>
                    <fullName>Colorectal Surgery</fullName>
                </value>
                <value>
                    <fullName>Dentistry</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Electrophysiology</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Family Practice</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>General Surgery</fullName>
                </value>
                <value>
                    <fullName>Geriatrics</fullName>
                </value>
                <value>
                    <fullName>Gynecologic Oncology</fullName>
                </value>
                <value>
                    <fullName>Hematology Oncology</fullName>
                </value>
                <value>
                    <fullName>Hepatobiliary</fullName>
                </value>
                <value>
                    <fullName>Hospitalist</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Interventional Radiology</fullName>
                </value>
                <value>
                    <fullName>Medical Genetics</fullName>
                </value>
                <value>
                    <fullName>Neonatology</fullName>
                </value>
                <value>
                    <fullName>Nephrology</fullName>
                </value>
                <value>
                    <fullName>Neuroradiology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Provider Education</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>